[gd_scene load_steps=14 format=3 uid="uid://b0wqfospt3gim"]

[ext_resource type="PackedScene" uid="uid://bwc6qgw5fm1cw" path="res://assets/Cubes/Cube_Crate.gltf" id="1_1gus6"]
[ext_resource type="Script" path="res://resources/scripts/cube_wooden.gd" id="2_7mfsv"]
[ext_resource type="ArrayMesh" uid="uid://f7yeq5hspahb" path="res://assets/Nature/Cloud_1.obj" id="3_gliwo"]
[ext_resource type="AudioStream" uid="uid://c7o5nbyi5vboo" path="res://resources/audio/Hit.ogg" id="3_pltps"]

[sub_resource type="BoxShape3D" id="BoxShape3D_detor"]
size = Vector3(2, 2, 2)

[sub_resource type="Animation" id="Animation_26pfm"]
resource_name = "Destroy"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cube_Crate:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cube_Crate:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 3.14159, 0)]
}

[sub_resource type="Animation" id="Animation_gix63"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cube_Crate:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cube_Crate:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f3tkv"]
_data = {
"Destroy": SubResource("Animation_26pfm"),
"RESET": SubResource("Animation_gix63")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_61dvy"]
size = Vector3(1.4, 0.2, 1.4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_coatt"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.392157)

[sub_resource type="Curve" id="Curve_vqf77"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_lgfef"]
curve = SubResource("Curve_vqf77")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hx44w"]
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 1.0
emission_ring_inner_radius = 0.0
gravity = Vector3(0, 9.8, 0)
radial_accel_min = 6.0
radial_accel_max = 8.0
radial_accel_curve = SubResource("CurveTexture_lgfef")
scale_min = 0.1
scale_max = 0.4

[node name="Cube" instance=ExtResource("1_1gus6")]
collision_layer = 4
script = ExtResource("2_7mfsv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="1"]
shape = SubResource("BoxShape3D_detor")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_f3tkv")
}

[node name="Area3D" type="Area3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.1, 0)
collision_layer = 4
input_ray_pickable = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
shape = SubResource("BoxShape3D_61dvy")

[node name="GPUParticles3D" type="GPUParticles3D" parent="." index="4"]
material_override = SubResource("StandardMaterial3D_coatt")
emitting = false
amount = 10
lifetime = 0.3
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_hx44w")
draw_pass_1 = ExtResource("3_gliwo")

[node name="AudioHit" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource("3_pltps")
volume_db = -12.4

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
